# xdvyturing

./: .gitignore  pyproject.toml
src/turing_challenges/: cli.py
src/turing_challenges/defi17/: README.md  defi16.py
src/xdvyturing/: utils.py
src/xdvyturing/defi1/: README.md  defi1.py
src/xdvyturing/defi11/: README.md  defi11.py
src/xdvyturing/defi13/: README.md  defi13.py
src/xdvyturing/defi14/: README.md  defi14.py
src/xdvyturing/defi15/: README.md  defi15.py
src/xdvyturing/defi16/: README.md  defi16.py
src/xdvyturing/defi6/: README.md  defi6.py
src/xdvyturing/defi8/: README.md  defi8.py
test/defi1/: test_defi1.py
