[project]
name = "xdvyturing"
version = "0.1.0"
packages = [{ include = "xdvyturing", from = "src" }]
description = "Programs and tests to solve Turing challenges."
authors = [
    {name = "Kirito",email = "50915339+Xdvy@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-html (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
